package jp.pgw.lab78.androrm.common.dml.interfaces

/**
 * ## Absert 文生成限定 マーカーインターフェース
 * @author Masahiro Inoue
 * @since 2025-08-01
 */
interface AbsertEntity : TableDefinitionEntity