package jp.pgw.lab78.androrm.common.dml.interfaces

/**
 * ## Delete 文生成限定 マーカーインターフェース
 * @author Masahiro Inoue
 * @since 2025-08-01
 */
interface DeleteEntity : TableDefinitionEntity