package jp.pgw.lab78.androrm.database.definitions

interface Entity {}