package jp.pgw.lab78.androrm.database.interfaces

/**
 * ## テーブル定義限定 マーカーインターフェース
 */
interface TableDefinitionEntity : Entity