package jp.pgw.lab78.androrm.database.interfaces

/**
 * ## Update 文生成限定 マーカーインターフェース
 */
interface UpdateEntity : Entity