package jp.pgw.lab78.androrm.database.interfaces

/**
 * ## Upsert 文生成限定 マーカーインターフェース
 */
interface UpsertEntity : Entity